@@ -5,7 +5,7 @@
 	<targetVersion>1.0.2059</targetVersion>
 	<url>https://ludeon.com/forums/index.php?topic=26276.0</url>
 	<description>"advanced powergeneration"
-	Ver.: 1.0-1.1.0
+	Ver.: 1.0-1.1.1
 	
 	a light in every corner, an extra workbench there, maybe another cooking stove - wondering where your power went?
 	
